move data to data/

--- a/templates/map.html
+++ b/templates/map.html
@@ -30,7 +30,7 @@
     <div id="container"></div>
 </body>
 
-<script src="../taxi_data_10000.js"></script>
+<script src="../data/taxi_data_10000.js"></script>
 <script>
     let track = null;
 
